2010-03-16  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#141871 - Tasks Button is not highlighted for unopened task

	* src/home/hd-task-navigator.c/h: Add _has_unseen_notifications func
	* src/home/hd-render-manager.c: Use _has_unseen_notifications to set
	the state of the Task Button every time we change state.

	Fixes: NB#141729 - Right-to-left web page titles cutted on the wrong
                           side

	* src/home/hd-task-navigator.c
	* src/home/hd-title-bar.c: Since our 'special' Maemo pango stopped 
	  adding '...' when ellipsizing, we can now just use that rather 
	  than clipping, and the problem is solved.

	Fixes: NB#139757 - task launcher icon got stuck in pressed state

	* src/launcher/hd-launcher-grid.c/h
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-tile.c/h: Alban's patch. Allow tile_reset
	to reset instantly as well as with an animation, and reset instantly
	when we first show the launcher.

	Fixes: NB#125674 - Background should be blank when device is locked 
                           from Layout mode
	Fixes: NB#145618 - Title seen over the appmenu in the blurred area
	
	* src/home/hd-render-manager.c (hd_render_manager_restack): Make sure
	that blur_front with the title bar is placed above app windows but
	below dialogs/menus.

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.136-1.

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Attempt to stack animas correctly.  If we fail to do so then when you
	restart hd while imageviewer is running you'll get a nice black screen
	in FSM because the background is stacked above the fullscreen image.
	Do this by recognizing transiency, which was broken as well (when an
	anima is parented somewhere libhildon makes it transient).

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#146110 Partial image is displayed in FSM while viewing images
		  sometimes

	Possibly we didn't honor the client's geometry request so the anima