@@ -1,5 +1,12 @@
 2010-03-16  Gordon Williams <gordon.williams@collabora.co.uk>
 
+	Fixes: NB#156831 - 1st tap on the task launcher is not recognized after
+                           going back from the edit view
+
+	* src/launcher/hd-launcher-page.c/h: add hd_launcher_page_get_scroller
+	* src/launcher/hd-launcher.c: Send a fake Mouse-release event after
+	  the long-press, because the real mouse release is never received.
+
 	Fixes: NB#141871 - Tasks Button is not highlighted for unopened task
 
 	* src/home/hd-task-navigator.c/h: Add _has_unseen_notifications func
